--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
             pointer-events: none;
             z-index: 2;
             display: block;
+            transition: height 0.3s;
+        }
+        .hero-nav-subtitle .frog-wrap.fully-raised {
+            height: 1.2em; /* Fully raised: show all */
         }
         .hero-nav-subtitle .frog-peep {
             width: 1.2em;
@@ -837,7 +841,7 @@
         }
     });
 
-    // FROG "PEEP" ANIMATION SCRIPT (robust, non-clipping)
+    // FROG "PEEP" ANIMATION SCRIPT (robust, non-clipping, fix for fully raised)
     document.addEventListener("DOMContentLoaded", function() {
         const subtitle = document.querySelector('.hero-nav-subtitle');
         const frogImgSrc = 'images/toad icon static.png'; // <-- update path if needed
@@ -882,8 +886,11 @@
             const wrap = wraps[idx];
             const letter = wrap.querySelector('.the-letter');
             const frog = wrap.querySelector('.frog-peep');
+            const frogWrap = wrap.querySelector('.frog-wrap');
+
             frog.classList.remove('fully-raised');
             frog.classList.remove('peeping');
+            frogWrap.classList.remove('fully-raised');
             letter.classList.remove('lifted');
             letter.classList.remove('raised');
 
@@ -891,12 +898,14 @@
             setTimeout(() => {
                 frog.classList.add('peeping');
                 letter.classList.add('raised');
+                // frogWrap stays small (not fully raised)
             }, 100);
 
             // Step 2: After 1.2s, frog pushes letter up and fully raises (takes letter's place)
             setTimeout(() => {
                 frog.classList.remove('peeping');
                 frog.classList.add('fully-raised');
+                frogWrap.classList.add('fully-raised'); // Make frogWrap tall!
                 letter.classList.remove('raised');
                 letter.classList.add('lifted');
             }, 1500);
@@ -904,6 +913,7 @@
             // Step 3: After 5 seconds, reset
             setTimeout(() => {
                 frog.classList.remove('peeping', 'fully-raised');
+                frogWrap.classList.remove('fully-raised');
                 letter.classList.remove('lifted','raised');
                 setTimeout(doFrogAnimation, randomDelay());
             }, 5000);
