--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
     // FROG "PEEP" ANIMATION SCRIPT
     document.addEventListener("DOMContentLoaded", function() {
         const subtitle = document.querySelector('.hero-nav-subtitle');
-        const frogImgSrc = 'images/frog.png'; // <-- update path if needed
+        const frogImgSrc = 'images/toad icon static.png'; // <-- update path if needed
         const originalText = subtitle.textContent.trim();
         subtitle.innerHTML = '';
 
