--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             -webkit-text-stroke: 0;
             text-stroke: 0;
             font-weight: normal;
+            word-break: break-word;
         }
         /* Robust Frog Mask Animation */
         .hero-nav-subtitle .char-frog-wrap {
@@ -296,114 +297,6 @@
             transform: scale(1);
         }
 
-        @media (max-width: 900px) {
-            .hero-header {
-                padding-left: 3vw;
-                padding-right: 3vw;
-                flex-direction: column;
-                align-items: stretch;
-            }
-            .hero-logo-col {
-                justify-content: flex-start;
-                align-items: center;
-                width: 100%;
-                margin-bottom: 10px;
-            }
-            .logo-circle { margin: 0 auto; }
-            .hero-logo { height: 95px; }
-            .hero-nav-title { font-size: 1.3rem; margin-bottom: 10px; }
-            .hero-nav-subtitle { font-size: 1.2rem; margin-bottom: 10px; }
-            .main-links a { font-size: 0.9rem; }
-            .main-links .icon { width: 1.2em; height: 1.2em; }
-            .main-links { gap: 14px; margin-top: 8px;}
-        }
-        @media (max-width: 700px) {
-            .hero-header {
-                flex-direction: column;
-                align-items: stretch;
-                gap: 0;
-                padding-left: 0;
-                padding-right: 0;
-                margin-top: 18px;
-            }
-            .hero-logo-col {
-                justify-content: flex-start;
-                align-items: center;
-                width: 100%;
-                margin-bottom: 10px;
-            }
-            .logo-circle { margin: 0 auto; }
-            .hero-logo { height: 54px; margin: 0; }
-            .hero-nav-col {
-                justify-content: center;
-                width: 100%;
-                align-items: flex-end;
-                margin-right: 0;
-            }
-            .hero-nav-title {
-                text-align: right;
-                width: 100%;
-                font-size: 1rem;
-                margin-bottom: 2px;
-                margin-top: 0;
-            }
-            .hero-nav-subtitle {
-                font-family: 'DotGothic16', monospace !important;
-                font-size: 0.85rem;
-                margin-bottom: 8px;
-                margin-top: -2px;
-                text-shadow:
-                    -1px -1px 0 #000,
-                    1px -1px 0 #000,
-                    -1px 1px 0 #000,
-                    1px 1px 0 #000,
-                    0px -1px 0 #000,
-                    0px 1px 0 #000,
-                    -1px 0px 0 #000,
-                    1px 0px 0 #000;
-            }
-            .main-links {
-                justify-content: flex-end;
-                gap: 8px;
-                font-size: 0.8rem;
-                margin-top: 10px;
-                margin-bottom: 0;
-            }
-            .main-links a { font-size: 0.8rem;}
-            .main-links .icon {
-                width: 1.1em;
-                height: 1.1em;
-                min-width: 1.1em;
-                min-height: 1.1em;
-            }
-        }
-        @media (max-width: 900px), (orientation: portrait) {
-            .hero-image-row {
-                flex-direction: column !important;
-                width: 100vw;
-            }
-            .hero-image-box {
-                width: 100vw;
-                aspect-ratio: 1/1;
-                min-width: 0;
-                min-height: 0;
-                border-bottom: 1px solid #eee;
-            }
-            .hero-image-row .hero-image-box:not(:last-child) {
-                border-right: none !important;
-                border-bottom: 1px solid #eee;
-            }
-        }
-        @media (min-width: 901px) and (orientation: landscape) {
-            .hero-image-row { flex-direction: row !important; }
-            .hero-image-box { border-bottom: none !important; }
-            .hero-image-row .hero-image-box:not(:last-child) {
-                border-right: none !important;
-            }
-        }
-        @media (max-width: 400px) {
-            .hero-logo { height: 35px; }
-        }
         .main-content {
             min-height: 100vh;
             display: flex;
@@ -586,10 +479,119 @@
             letter-spacing: 0.07em;
             text-align: center;
         }
-        @media (max-width:600px) {
-            .footer-social-link svg { width: 1.2em; height: 1.2em; }
-            .footer-social-link { font-size: 0.8em; }
-            .footer-social-links { gap: 12px; }
+
+        /* MOBILE OPTIMIZATION (maintains desktop styling) */
+        @media (max-width: 700px) {
+            html, body {
+                font-size: 15px;
+            }
+            .hero-header {
+                flex-direction: column;
+                align-items: center;
+                justify-content: flex-start;
+                padding: 0 2vw;
+                margin-top: 14px;
+                width: 100vw;
+                max-width: 100vw;
+            }
+            .hero-logo { height: 56px; }
+            .logo-circle { padding: 8px; }
+            .hero-nav-col {
+                align-items: center;
+                width: 100%;
+                margin: 0;
+                padding: 0;
+            }
+            .hero-nav-title {
+                text-align: center;
+                width: 100%;
+                font-size: 1.05rem;
+                margin-bottom: 4px;
+                margin-top: 0;
+                word-break: break-word;
+            }
+            .hero-nav-subtitle {
+                text-align: center;
+                width: 100%;
+                font-size: 0.88rem;
+                margin-bottom: 8px;
+                margin-top: -2px;
+                word-break: break-all;
+            }
+            .main-links {
+                flex-direction: column;
+                align-items: center;
+                gap: 8px;
+                width: 100%;
+                margin: 8px 0 0 0;
+                padding: 0;
+            }
+            .main-links a {
+                font-size: 0.95rem;
+                width: 90%;
+                justify-content: center;
+                padding: 0.5em 0;
+                border-radius: 10px;
+            }
+            .nav-hero-separator, .banner-hero-separator {
+                width: 98vw;
+                min-width: 0;
+                max-width: 100vw;
+                height: 36px;
+            }
+            .nav-hero-separator svg, .banner-hero-separator svg {
+                height: 36px;
+                min-height: 36px;
+            }
+            .hero-images-spacing, .banner-images-spacing {
+                height: 18px;
+            }
+            .hero-image-row {
+                flex-direction: column !important;
+                width: 100vw;
+                align-items: center;
+            }
+            .hero-image-box {
+                width: 96vw;
+                max-width: 100vw;
+                margin: 0 auto 8px auto;
+                aspect-ratio: 1/1;
+            }
+            .gallery-grid {
+                grid-template-columns: 1fr;
+                gap: 18px;
+                padding: 10px 2vw 30px 2vw;
+            }
+            .gallery-item img {
+                border-radius: 8px;
+            }
+            .footer-social-links {
+                flex-direction: column;
+                gap: 8px;
+            }
+            .footer-social-link {
+                font-size: 0.8rem;
+            }
+            body, html {
+                overflow-x: hidden;
+                max-width: 100vw;
+            }
+            /* Frog animation sizing tweaks for mobile */
+            .hero-nav-subtitle .frog-peep,
+            .hero-nav-subtitle .frog-wrap {
+                width: 1em;
+                min-width: 1em;
+            }
+            .hero-nav-subtitle .frog-peep {
+                height: 1em;
+                min-height: 1em;
+            }
+            .hero-nav-subtitle .frog-wrap {
+                height: 0.6em;
+            }
+            .hero-nav-subtitle .frog-wrap.fully-raised {
+                height: 1em;
+            }
         }
     </style>
 </head>
