--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Lazy Toad Studios</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Press Start 2P & DotGothic16 fonts -->
+    <!-- Fonts: Press Start 2P & DotGothic16 -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=DotGothic16&display=swap" rel="stylesheet">
     <style>
         html, body {
@@ -70,27 +70,12 @@
         .main-links a, 
         .footer-social-link, 
         h1, h2, h3, h4, h5, h6 {
-            font-family: 'Press Start 2P', cursive, monospace !important;
+            font-family: 'Press Start 2P', monospace !important;
             letter-spacing: 0.04em;
         }
-        .hero-nav-title {
-            font-size: 2.2rem;
-            color: #fff;
-            margin: 0 0 0.3em 0;
-            text-align: right;
-            line-height: 1.1;
-            text-transform: uppercase;
-            -webkit-text-stroke: 1.2px #111;
-            text-stroke: 1.2px #111;
-            text-shadow:
-                1px 1px 0 #111,
-                -1px 1px 0 #111,
-                1px -1px 0 #111,
-                -1px -1px 0 #111;
-        }
-        /* Japanese subtitle: always DotGothic16 */
+        /* Subtitle uses DotGothic16 by default (desktop) */
         .hero-nav-subtitle {
-            font-family: 'DotGothic16', monospace, sans-serif !important;
+            font-family: 'DotGothic16', monospace !important;
             font-size: 2.2rem;
             color: #fff;
             text-align: right;
@@ -150,10 +135,9 @@
             transform: translateY(100%);
         }
         .hero-nav-subtitle .frog-peep.peeping {
-            transform: translateY(30%); /* adjust for top half only */
+            transform: translateY(30%);
         }
         .hero-nav-subtitle .frog-peep.fully-raised {
-            /* frog fully occupies the letter's space */
             transform: translateY(0);
         }
         .hero-nav-subtitle .the-letter {
@@ -249,19 +233,8 @@
         .banner-hero-separator {
             margin-top: 0;
         }
-        .banner-image-row {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 auto 20px auto;
-        }
-        .banner-image {
-            width: 95vw;
-            max-width: 1200px;
-            height: auto;
-            border-radius: 16px;
-            box-shadow: 0 4px 28px rgba(0,0,0,0.07);
-            object-fit: cover;
+        .banner-image-mobile {
+            display: none;
         }
         .hero-images-spacing, .banner-images-spacing {
             height: 38px;
@@ -495,7 +468,7 @@
             text-align: center;
         }
 
-        /* MOBILE OPTIMIZATION (maintains desktop styling) */
+        /* MOBILE OPTIMIZATION (only for mobile) */
         @media (max-width: 700px) {
             html, body {
                 font-size: 15px;
@@ -512,7 +485,7 @@
             .hero-logo { height: 56px; }
             .logo-circle { 
                 padding: 8px; 
-                margin-bottom: 18px; /* Add space below logo */
+                margin-bottom: 18px;
             }
             .hero-nav-col {
                 align-items: center;
@@ -528,9 +501,9 @@
                 margin-top: 0;
                 word-break: break-word;
             }
-            /* Repeat font-family for subtitle to ensure correct font */
+            /* Force DotGothic16 for subtitle on mobile */
             .hero-nav-subtitle {
-                font-family: 'DotGothic16', monospace, sans-serif !important;
+                font-family: 'DotGothic16', monospace !important;
                 text-align: center;
                 width: 100%;
                 font-size: 0.88rem;
@@ -563,8 +536,11 @@
                 height: 36px;
                 min-height: 36px;
             }
-            .banner-image {
+            .banner-image-mobile {
+                display: block;
                 width: 98vw;
+                max-width: 100vw;
+                margin: 0 auto 10px auto;
                 border-radius: 10px;
             }
             .hero-images-spacing, .banner-images-spacing {
@@ -665,6 +641,21 @@
           />
         </svg>
       </div>
+      <!-- Banner image: only visible on mobile -->
+      <img src="images/banner1.jpg" alt="Featured Banner" class="banner-image-mobile" />
+      <div class="banner-hero-separator">
+        <svg viewBox="0 0 100 56" preserveAspectRatio="none">
+          <path
+            d="M2,28 Q25,39 50,28 Q75,16 98,28"
+            stroke="#fff"
+            stroke-width="19"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            opacity="0.97"
+          />
+        </svg>
+      </div>
       <div class="hero-images-spacing"></div>
       <!-- 4-IMAGE HERO ROW -->
       <div class="hero-image-row">
@@ -682,24 +673,6 @@
         </div>
       </div>
       <div class="banner-images-spacing"></div>
-      <!-- Marker-style banner line (half thickness) -->
-      <div class="banner-hero-separator">
-        <svg viewBox="0 0 100 56" preserveAspectRatio="none">
-          <path
-            d="M2,28 Q25,39 50,28 Q75,16 98,28"
-            stroke="#fff"
-            stroke-width="19"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            opacity="0.97"
-          />
-        </svg>
-      </div>
-      <!-- Banner image(s) -->
-      <div class="banner-image-row">
-        <img src="images/banner1.jpg" alt="Featured Banner" class="banner-image">
-      </div>
     </section>
     <!-- Main Content (hidden until scroll or click) -->
     <section class="main-content hidden" id="mainContent">
