--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
         </svg>
       </div>
       <!-- Banner image: only visible on mobile -->
-      <img src="images/banner1.jpg" alt="Featured Banner" class="banner-image-mobile" />
+      <img src="images/the botanist a4 website.jpg" alt="Featured Banner" class="banner-image-mobile" />
       <div class="banner-hero-separator">
         <svg viewBox="0 0 100 56" preserveAspectRatio="none">
           <path
