--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Lazy Toad Studios</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Fonts: Press Start 2P & DotGothic16 -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=DotGothic16&display=swap" rel="stylesheet">
     <style>
         html, body {
@@ -234,7 +233,7 @@
             margin-top: 0;
         }
         .banner-image-mobile {
-            display: none;
+            display: none; /* Hidden on desktop */
         }
         .hero-images-spacing, .banner-images-spacing {
             height: 38px;
@@ -527,7 +526,7 @@
                 min-height: 36px;
             }
             .banner-image-mobile {
-                display: block;
+                display: block; /* Visible on mobile */
                 width: 98vw;
                 max-width: 100vw;
                 margin: 0 auto 10px auto;
@@ -592,7 +591,6 @@
     </style>
 </head>
 <body>
-    <!-- Hero Section -->
     <section class="hero" id="hero">
       <div class="hero-header">
         <div class="hero-logo-col">
@@ -623,7 +621,6 @@
           </nav>
         </div>
       </div>
-      <!-- Marker-style nav line (half thickness) -->
       <div class="nav-hero-separator">
         <svg viewBox="0 0 100 56" preserveAspectRatio="none">
           <path
@@ -637,24 +634,8 @@
           />
         </svg>
       </div>
-      <!-- Banner image: only visible on mobile -->
-      <img src="images/the botanist a4 website.jpg" alt="Featured Banner" class="banner-image-mobile" />
-      <div class="banner-hero-separator">
-        <svg viewBox="0 0 100 56" preserveAspectRatio="none">
-          <path
-            d="M2,28 Q25,39 50,28 Q75,16 98,28"
-            stroke="#fff"
-            stroke-width="19"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            opacity="0.97"
-          />
-        </svg>
-      </div>
-      <div class="hero-images-spacing"></div>
-      <!-- 4-IMAGE HERO ROW -->
-      <div class="hero-image-row">
+      
+      <div class="hero-images-spacing"></div> <div class="hero-image-row">
         <div class="hero-image-box" tabindex="0">
           <img src="images/walking temple website.jpg" alt="After the War" class="hero-image">
         </div>
@@ -668,9 +649,22 @@
           <img src="images/5 Joe Shenton - Remnants.jpg" alt="Transporter" class="hero-image">
         </div>
       </div>
-      <div class="banner-images-spacing"></div>
+
+      <div class="banner-images-spacing"></div> <div class="banner-hero-separator">
+        <svg viewBox="0 0 100 56" preserveAspectRatio="none">
+          <path
+            d="M2,28 Q25,39 50,28 Q75,16 98,28"
+            stroke="#fff"
+            stroke-width="19"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            opacity="0.97"
+          />
+        </svg>
+      </div>
+      <img src="images/the botanist a4 website.jpg" alt="Featured Banner" class="banner-image-mobile" />
     </section>
-    <!-- Main Content (hidden until scroll or click) -->
     <section class="main-content hidden" id="mainContent">
         <div style="max-width: 700px; margin: 0px auto 0 auto; padding: 20px;">
             <h2>Gallery</h2>
@@ -678,7 +672,7 @@
         <div class="gallery-grid">
             <div class="gallery-item">
                 <a href="gallery/after-the-war.html">
-                    <img src="images/1 Joe Shenton - Respite.jpg" alt="After the War">
+                    <img src="images/1 Joe Shenton - Respite.jpg" alt="Respite">
                     <div class="gallery-overlay">
                         <div class="gallery-overlay-title">Respite</div>
                         <div class="gallery-overlay-meta">Gouache on paper · 2022</div>
@@ -778,7 +772,6 @@
             </div>
         </div>
     </section>
-    <!-- Modal for full size images -->
     <div id="imgModal" class="modal" onclick="event.target === this && closeModal()">
         <div class="modal-content">
             <button class="close-modal" onclick="closeModal()" aria-label="Close">&times;</button>
@@ -786,7 +779,6 @@
             <div id="modalCaption" class="modal-caption"></div>
         </div>
     </div>
-    <!-- Social Footer -->
     <footer class="footer-social">
         <div class="footer-social-links">
             <a class="footer-social-link" href="mailto:contact@lazytoadstudios.com" target="_blank" rel="noopener" title="Contact Email">
