--- a/index.html
+++ b/index.html
@@ -72,6 +72,25 @@
             font-family: 'Press Start 2P', monospace !important;
             letter-spacing: 0.04em;
         }
+        /* MAIN TITLE FONT & OUTLINE */
+        .hero-nav-title {
+            color: #fff; /* White text */
+            text-shadow:
+                -2px -2px 0 #000,
+                2px -2px 0 #000,
+                -2px 2px 0 #000,
+                2px 2px 0 #000,
+                0px -2px 0 #000,
+                0px 2px 0 #000,
+                -2px 0px 0 #000,
+                2px 0px 0 #000; /* Black outline */
+            -webkit-text-stroke: 0; /* Ensure no unintended browser-specific strokes interfere */
+            text-stroke: 0;
+            font-weight: normal;
+            word-break: break-word;
+            text-align: right; /* Keep original alignment */
+            margin-bottom: 4px; /* Adjust spacing if needed after adding shadow */
+        }
         /* Subtitle uses DotGothic16 by default (desktop) */
         .hero-nav-subtitle {
             font-family: 'DotGothic16', monospace !important;
@@ -509,7 +528,7 @@
             .hero-nav-title {
                 text-align: center;
                 width: 100%;
-                font-size: 1.05rem;
+                font-size: 1.05rem; /* Adjusted for mobile */
                 margin-bottom: 4px;
                 margin-top: 0;
                 word-break: break-word;
