--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             .hero-nav-title {
                 text-align: center;
                 width: 100%;
-                font-size: 1.05rem; /* Adjusted for mobile */
+                font-size: 1.1rem; /* Increased slightly for matching */
                 margin-bottom: 4px;
                 margin-top: 0;
                 word-break: break-word;
@@ -622,6 +622,8 @@
         @media (max-width: 700px) {
             body .hero-nav-subtitle {
                 font-family: 'DotGothic16', monospace !important;
+                text-align: center; /* Centered on mobile */
+                font-size: 1.1rem; /* Adjusted size to match main title */
             }
         }
     </style>
